[project]
name = "crispy-chainsaw-data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gergely Elias", email = "gergely.elias@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[project.scripts]
crispy-chainsaw-data-analytics = "crispy_chainsaw_data_analytics:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
]
